--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+ background-image:url(https://i.pinimg.com/originals/9d/e0/5b/9de05b9f488c109c72b5364297064301.jpg)
 }
 
 .App-logo {
